fix: Lower the z-index of notifications so they go under the navigation

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -845,7 +845,7 @@ td.p-accordion {
 
 #success:target {
   display: block;
-  z-index: 10;
+  z-index: 9;
 }
 
 #newsletter-signup {
@@ -855,7 +855,7 @@ td.p-accordion {
 
 #newsletter-signup:target {
   display: block;
-  z-index: 10;
+  z-index: 9;
 }
 
 #contact-success {
@@ -865,7 +865,7 @@ td.p-accordion {
 
 #contact-success:target {
   display: block;
-  z-index: 10;
+  z-index: 9;
 }
 
 #updated {
